# data-structures

./: .gitignore  WORKSPACE  bazel-data-structures
.devcontainer/: Dockerfile  devcontainer.json
datafile/: hundred.txt  ten.txt  thousand.txt
src/: BUILD.bazel  exercise-1.cpp  gen.cpp  hello.cpp
src/common/: BUILD.bazel  common-io.h
