load("@rules_cc//cc:defs.bzl", "cc_binary")
load("@//:global_copts.bzl", "global_cppopts")

package(features = ["-default_compile_flags"])

cc_binary(
    name = "cppversion",
    srcs = ["cppversion.cpp"],
    copts = global_cppopts(),
    deps = [
        "@fmt//:main",
    ],
)

cc_binary(
    name = "gen",
    srcs = ["gen.cpp"],
    copts = global_cppopts(),
    deps = [
        "@fmt//:main",
    ],
)

cc_binary(
    name = "exercise-1",
    srcs = ["exercise-1.cpp"],
    copts = global_cppopts(),
    deps = [
        "//src/common:lib",
        "@fmt//:main",
    ],
)
