load("@rules_cc//cc:defs.bzl", "cc_library")
load("@//:global_copts.bzl", "global_cppopts")

package(features = ["-default_compile_flags"])

cc_library(
    name = "lib",
    srcs = glob([
        "*.cpp",
        "*.h",
    ]),
    copts = global_cppopts(),
    strip_include_prefix = "src/",
    visibility = ["//visibility:public"],
    deps = [
    ],
)
